--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,19 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description":"",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "dev": "nodemon index.js"
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "build": "^0.1.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  },
-  "description": ""
+  }
+ 
 }
